--- a/appspec.yml
+++ b/appspec.yml
@@ -13,9 +13,9 @@ permissions:
 
 hooks:
 
-  BeforeInstall:
-    - location: scripts/before_install.sh
-      timeout: 300
+  #BeforeInstall:
+    #- location: scripts/before_install.sh
+   #   timeout: 300
    #   runas: root
   
   AfterInstall:
